<resources>
    <string name="app_name">CalculatorKu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_b">Team B</string>

    <string name="_3_points">+3 points</string>

    <string name="_2_points">+2 points</string>
    <string name="free_throw">FREE THROW</string>

    <string name="reset">Reset</string>

    <string name="team_a">Team A</string>
</resources>
